--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-qr-reader": "^2.2.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-simple-maps": "^1.0.0-beta.0",
     "reactstrap": "^8.4.1",
     "typescript": "^3.8.3"
   },
