--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-simple-maps": "^1.0.0-beta.0",
+    "react-transition-group": "^4.3.0",
     "reactstrap": "^8.4.1",
     "typescript": "^3.8.3"
   },
