--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.18.3",
     "node-sass": "^4.13.1",
+    "qrcode.react": "^1.0.0",
     "react": "^16.13.0",
     "react-bootstrap-range-slider": "^0.3.1",
     "react-copy-to-clipboard": "^5.0.2",
