--- a/package.json
+++ b/package.json
@@ -1,82 +1,120 @@
 {
   "name": "defi-blockchain-client-ui",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "description": "",
+  "main": "./electron-start.js",
+  "author": {
+    "name": "Cake",
+    "email": "cake@cakedefi.com",
+    "url": "http://cakedefi.com/"
+  },
+  "homepage": "./",
+  "publicPath": "./",
+  "scripts": {
+    "test": "jest",
+    "start": "nf start -p 5000",
+    "react-start": "BROWSER=none webpack-dev-server --mode development --open ",
+    "electron": "electron .",
+    "electron-start": "node src/start-react",
+    "build-react": "webpack --mode production",
+    "electron-url-start": "export ELECTRON_START_URL=http://localhost:5000 && electron ./electron-start.js",
+    "pack": "electron-builder --dir",
+    "dist": "npm run build-react && electron-builder",
+    "dist-all": "npm run build-react && electron-builder -mwl",
+    "lint": "eslint --cache --format codeframe --ext mjs,jsx,js src test",
+    "postinstall": "electron-builder install-app-deps"
+  },
+  "keywords": [],
+  "license": "ISC",
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^25.1.3",
-    "@types/node": "^13.7.7",
-    "@types/react": "^16.9.23",
-    "@types/react-dom": "^16.9.5",
+    "@babel/preset-typescript": "^7.9.0",
     "bootstrap": "^4.4.1",
     "d3-fetch": "^1.1.2",
     "d3-scale": "^3.2.1",
-    "electron": "^8.0.3",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.18.3",
     "foreman": "^3.0.1",
-    "node-sass": "^4.13.1",
+    "prop-types": "^15.7.2",
     "qrcode.react": "^1.0.0",
-    "react": "^16.13.0",
+    "react": "^16.13.1",
     "react-bootstrap-range-slider": "^0.3.1",
     "react-copy-to-clipboard": "^5.0.2",
-    "react-dom": "^16.13.0",
+    "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
+    "react-hot-loader": "^4.12.20",
     "react-icons": "^3.9.0",
     "react-qr-reader": "^2.2.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0",
-    "react-simple-maps": "^1.0.0-beta.0",
-    "react-svg": "^11.0.14",
-    "react-transition-group": "^4.3.0",
+    "react-simple-maps": "^2.0.0",
     "reactstrap": "^8.4.1",
-    "typescript": "^3.8.3",
+    "typings-for-css-modules-loader": "^1.7.0",
     "uifx": "^2.0.7"
   },
-  "scripts": {
-    "start": "nf start -p 3000",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "electron": "electron .",
-    "electron-start": "node src/start-react",
-    "react-start": "BROWSER=none react-scripts start",
-    "pack": "build --dir",
-    "dist": "npm run build && build",
-    "postinstall": "install-app-deps"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
   "devDependencies": {
-    "electron-builder": "^22.3.6"
+    "@babel/plugin-proposal-decorators": "^7.8.3",
+    "@neutrinojs/airbnb": "^9.1.0",
+    "@neutrinojs/compile-loader": "^9.1.0",
+    "@neutrinojs/copy": "^9.1.0",
+    "@neutrinojs/jest": "^9.1.0",
+    "@neutrinojs/react": "^9.1.0",
+    "@neutrinojs/style-loader": "^9.1.0",
+    "@types/classnames": "^2.2.10",
+    "@types/react": "^16.9.29",
+    "@types/react-copy-to-clipboard": "^4.3.0",
+    "@types/react-dom": "^16.9.5",
+    "@types/react-helmet": "^5.0.15",
+    "@types/react-qr-reader": "^2.1.2",
+    "@types/react-router-dom": "^5.1.3",
+    "@types/react-transition-group": "^4.2.4",
+    "@types/reactstrap": "^8.4.2",
+    "autoprefixer": "^9.7.5",
+    "electron": "^8.2.0",
+    "electron-builder": "^22.4.1",
+    "eslint": "^6.8.0",
+    "fork-ts-checker-webpack-plugin": "^4.1.2",
+    "imagemin-webpack-plugin": "^2.4.2",
+    "jest": "^25.2.4",
+    "neutrino": "^9.1.0",
+    "node-sass": "^4.13.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^8.0.2",
+    "source-map-loader": "^0.2.4",
+    "ts-loader": "^6.2.2",
+    "typescript": "^3.8.3",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   },
-  "homepage": "./",
-  "main": "src/start.js",
   "build": {
-    "appId": "com.electron.electron-with-create-react-app",
-    "win": {
-      "iconUrl": "https://cdn2.iconfinder.com/data/icons/designer-skills/128/react-256.png"
+    "appId": "enupal-electronv1",
+    "asar": true,
+    "files": [
+      "./electron-start.js",
+      "build/release/**/*",
+      "!node_modules"
+    ],
+    "icon": "assets/app-icon/png/512.png",
+    "dmg": {
+      "contents": [
+        {
+          "x": 40,
+          "y": 150
+        },
+        {
+          "x": 350,
+          "y": 150,
+          "type": "link",
+          "path": "/Applications"
+        }
+      ]
     },
-    "directories": {
-      "buildResources": "public"
+    "linux": {
+      "target": [
+        "AppImage",
+        "deb"
+      ]
+    },
+    "win": {
+      "target": "NSIS"
     }
   }
 }
