--- a/package.json
+++ b/package.json
@@ -40,9 +40,12 @@
     "react-hot-loader": "^4.12.20",
     "react-icons": "^3.9.0",
     "react-qr-reader": "^2.2.1",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-simple-maps": "^2.0.0",
     "reactstrap": "^8.4.1",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^1.1.3",
     "typings-for-css-modules-loader": "^1.7.0",
     "uifx": "^2.0.7"
   },
@@ -60,9 +63,12 @@
     "@types/react-dom": "^16.9.5",
     "@types/react-helmet": "^5.0.15",
     "@types/react-qr-reader": "^2.1.2",
+    "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
+    "@reduxjs/toolkit": "^1.3.2",
     "@types/react-transition-group": "^4.2.4",
     "@types/reactstrap": "^8.4.2",
+    "@types/redux-logger": "^3.0.7",
     "autoprefixer": "^9.7.5",
     "d3-fetch": "^1.1.2",
     "d3-scale": "^3.2.1",
