--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "start": "nf start -p 5000",
     "react-start": "BROWSER=none webpack-dev-server --mode development --open ",
     "electron": "electron .",
-    "electron-start": "node src/start-react",
+    "electron-start": "node react-start",
     "build-react": "webpack --mode production",
     "electron-url-start": "export ELECTRON_START_URL=http://localhost:5000 && electron ./electron-start.js",
     "pack": "electron-builder --dir",
@@ -28,7 +28,10 @@
   "license": "ISC",
   "dependencies": {
     "@babel/preset-typescript": "^7.9.0",
+    "autoprefixer": "^9.7.5",
     "bootstrap": "^4.4.1",
+    "d3-fetch": "^1.1.2",
+    "d3-scale": "^3.2.1",
     "foreman": "^3.0.1",
     "prop-types": "^15.7.2",
     "qrcode.react": "^1.0.0",
@@ -57,6 +60,7 @@
     "@neutrinojs/jest": "^9.1.0",
     "@neutrinojs/react": "^9.1.0",
     "@neutrinojs/style-loader": "^9.1.0",
+    "@reduxjs/toolkit": "^1.3.2",
     "@types/classnames": "^2.2.10",
     "@types/react": "^16.9.29",
     "@types/react-copy-to-clipboard": "^4.3.0",
@@ -65,13 +69,9 @@
     "@types/react-qr-reader": "^2.1.2",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
-    "@reduxjs/toolkit": "^1.3.2",
     "@types/react-transition-group": "^4.2.4",
     "@types/reactstrap": "^8.4.2",
     "@types/redux-logger": "^3.0.7",
-    "autoprefixer": "^9.7.5",
-    "d3-fetch": "^1.1.2",
-    "d3-scale": "^3.2.1",
     "electron": "^8.2.0",
     "electron-builder": "^22.4.1",
     "eslint": "^6.8.0",
