--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-icons": "^3.9.0",
     "react-qr-reader": "^2.2.1",
     "react-redux": "^7.2.0",
+    "react-redux-i18n": "^1.9.3",
     "react-router-dom": "^5.1.2",
     "react-simple-maps": "^2.0.0",
     "reactstrap": "^8.4.1",
@@ -68,6 +69,7 @@
     "@types/react-helmet": "^5.0.15",
     "@types/react-qr-reader": "^2.1.2",
     "@types/react-redux": "^7.1.7",
+    "@types/react-redux-i18n": "0.0.11",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-transition-group": "^4.2.4",
     "@types/reactstrap": "^8.4.2",
