--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "electron": "^8.2.0",
     "electron-builder": "^22.4.1",
     "eslint": "^6.8.0",
+    "file-loader": "^6.0.0",
     "fork-ts-checker-webpack-plugin": "^4.1.2",
     "imagemin-webpack-plugin": "^2.4.2",
     "jest": "^25.2.4",
