--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "foreman": "^3.0.1",
     "glob": "^7.1.6",
     "is-electron": "^2.2.0",
+    "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "qrcode.react": "^1.0.0",
     "react": "^16.13.1",
@@ -66,6 +67,7 @@
     "@neutrinojs/style-loader": "^9.1.0",
     "@reduxjs/toolkit": "^1.3.2",
     "@types/classnames": "^2.2.10",
+    "@types/lodash": "^4.14.149",
     "@types/react": "^16.9.29",
     "@types/react-copy-to-clipboard": "^4.3.0",
     "@types/react-dom": "^16.9.5",
@@ -83,9 +85,11 @@
     "file-loader": "^6.0.0",
     "fork-ts-checker-webpack-plugin": "^4.1.2",
     "imagemin-webpack-plugin": "^2.4.2",
+    "install": "^0.13.0",
     "jest": "^25.2.4",
     "neutrino": "^9.1.0",
     "node-sass": "^4.13.1",
+    "npm": "^6.14.4",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^8.0.2",
