--- a/package.json
+++ b/package.json
@@ -30,16 +30,20 @@
     "@babel/preset-typescript": "^7.9.0",
     "auto-launch": "^5.0.5",
     "autoprefixer": "^9.7.5",
+    "base-64": "^0.1.0",
     "bootstrap": "^4.4.1",
+    "crypto-js": "^4.0.0",
     "d3-fetch": "^1.1.2",
     "d3-scale": "^3.2.1",
     "foreman": "^3.0.1",
     "glob": "^7.1.6",
     "ini": "^1.3.5",
     "is-electron": "^2.2.0",
+    "js-yaml": "^3.13.1",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "qrcode.react": "^1.0.0",
+    "random-string": "^0.2.0",
     "react": "^16.13.1",
     "react-bootstrap-range-slider": "^0.3.1",
     "react-copy-to-clipboard": "^5.0.2",
@@ -56,7 +60,8 @@
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
     "typings-for-css-modules-loader": "^1.7.0",
-    "uifx": "^2.0.7"
+    "uifx": "^2.0.7",
+    "utf8": "^3.0.0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.8.3",
@@ -104,7 +109,7 @@
   "build": {
     "appId": "enupal-electronv1",
     "copyright": "Copyright © year ${author}",
-    "asar": true,
+    "asar": false,
     "files": [
       "./electron-start.js",
       "./constants.js",
