--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "test": "jest",
     "start": "nf start -p 5000",
     "react-start": "BROWSER=none webpack-dev-server --mode development --open ",
-    "electron": "electron .",
+    "electron": "NODE_ENV=development electron .",
     "electron-start": "node react-start",
     "build-react": "webpack --mode production",
     "electron-url-start": "export ELECTRON_START_URL=http://localhost:5000 && electron ./electron-start.js",
     "pack": "electron-builder --dir",
-    "dist": "npm run build-react && electron-builder",
+    "dist": "npm run build-react && NODE_ENV=production electron-builder",
     "dist-all": "npm run build-react && electron-builder -mwl",
     "lint": "eslint --cache --format codeframe --ext mjs,jsx,js src test",
     "postinstall": "electron-builder install-app-deps"
@@ -35,13 +35,17 @@
     "crypto-js": "^4.0.0",
     "d3-fetch": "^1.1.2",
     "d3-scale": "^3.2.1",
+    "electron-root-path": "^1.0.16",
+    "find-process": "^1.4.3",
     "foreman": "^3.0.1",
     "glob": "^7.1.6",
     "ini": "^1.3.5",
     "is-electron": "^2.2.0",
     "js-yaml": "^3.13.1",
     "lodash": "^4.17.15",
+    "os": "^0.1.1",
     "prop-types": "^15.7.2",
+    "ps-node": "^0.1.6",
     "qrcode.react": "^1.0.0",
     "random-string": "^0.2.0",
     "react": "^16.13.1",
@@ -109,12 +113,21 @@
   "build": {
     "appId": "enupal-electronv1",
     "copyright": "Copyright © year ${author}",
-    "asar": false,
+    "asar": true,
     "files": [
       "./electron-start.js",
       "./constants.js",
       "build/release/**/*",
       "electron-app"
+    ],
+    "extraResources": [
+      {
+        "from": "./binary/",
+        "to": "./binary",
+        "filter": [
+          "**/*"
+        ]
+      }
     ],
     "icon": "electron-app/assets/icon/icon-512.png",
     "dmg": {
