--- a/webapp/package.json
+++ b/webapp/package.json
@@ -12,12 +12,20 @@
   "scripts": {
     "test": "jest",
     "start": "webpack-dev-server --mode development --open",
-    "build-react": "webpack --mode production"
+    "build-react": "webpack --mode production",
+    "storybook": "start-storybook -p 9009 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "keywords": [],
   "license": "ISC",
   "dependencies": {
     "@babel/preset-typescript": "^7.9.0",
+    "@storybook/addon-actions": "^5.3.17",
+    "@storybook/addon-docs": "^5.3.17",
+    "@storybook/addon-links": "^5.3.17",
+    "@storybook/addons": "^5.3.17",
+    "@storybook/preset-create-react-app": "^2.1.1",
+    "@storybook/react": "^5.3.17",
     "autoprefixer": "^9.7.5",
     "bootstrap": "^4.4.1",
     "d3-fetch": "^1.1.2",
