Fixed storybook build issue

--- a/webapp/package.json
+++ b/webapp/package.json
@@ -20,12 +20,12 @@
   "license": "ISC",
   "dependencies": {
     "@babel/preset-typescript": "^7.9.0",
-    "@storybook/addon-actions": "^5.3.17",
-    "@storybook/addon-docs": "^5.3.17",
-    "@storybook/addon-links": "^5.3.17",
-    "@storybook/addons": "^5.3.17",
+    "@storybook/addon-actions": "^5.3.9",
+    "@storybook/addon-docs": "^5.3.9",
+    "@storybook/addon-links": "^5.3.9",
+    "@storybook/addons": "^5.3.9",
     "@storybook/preset-create-react-app": "^2.1.1",
-    "@storybook/react": "^5.3.17",
+    "@storybook/react": "^5.3.9",
     "autoprefixer": "^9.7.5",
     "bootstrap": "^4.4.1",
     "d3-fetch": "^1.1.2",
@@ -47,6 +47,7 @@
     "react-redux": "^7.2.0",
     "react-redux-i18n": "^1.9.3",
     "react-router-dom": "^5.1.2",
+    "react-scripts": "2.1.8",
     "react-simple-maps": "^2.0.0",
     "reactstrap": "^8.4.1",
     "redux-logger": "^3.0.6",
@@ -82,6 +83,7 @@
     "imagemin-webpack-plugin": "^2.4.2",
     "install": "^0.13.0",
     "jest": "^25.2.4",
+    "mini-css-extract-plugin": "^0.7.0",
     "neutrino": "^9.1.0",
     "node-sass": "^4.13.1",
     "npm": "^6.14.4",
