--- a/webapp/package.json
+++ b/webapp/package.json
@@ -13,8 +13,8 @@
     "test": "jest",
     "start": "webpack-dev-server --mode development --open",
     "build-react": "webpack --mode production",
-    "storybook": "start-storybook -p 9009 -s public",
-    "build-storybook": "build-storybook -s public"
+    "storybook": "start-storybook -p 9009",
+    "build-storybook": "build-storybook"
   },
   "keywords": [],
   "license": "ISC",
@@ -24,7 +24,6 @@
     "@storybook/addon-docs": "^5.3.9",
     "@storybook/addon-links": "^5.3.9",
     "@storybook/addons": "^5.3.9",
-    "@storybook/preset-create-react-app": "^2.1.1",
     "@storybook/react": "^5.3.9",
     "autoprefixer": "^9.7.5",
     "bootstrap": "^4.4.1",
@@ -47,7 +46,6 @@
     "react-redux": "^7.2.0",
     "react-redux-i18n": "^1.9.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "2.1.8",
     "react-simple-maps": "^2.0.0",
     "reactstrap": "^8.4.1",
     "redux-logger": "^3.0.6",
@@ -64,6 +62,7 @@
     "@neutrinojs/react": "^9.1.0",
     "@neutrinojs/style-loader": "^9.1.0",
     "@reduxjs/toolkit": "^1.3.2",
+    "@storybook/preset-typescript": "^3.0.0",
     "@types/classnames": "^2.2.10",
     "@types/lodash": "^4.14.149",
     "@types/react": "^16.9.29",
