--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "electron": "npm run transpile && NODE_ENV=development electron .",
     "electron-url-start": "export ELECTRON_START_URL=http://localhost:5000 && electron .",
     "pack": "npm run build-react && npm run transpile && NODE_ENV=production electron-builder --dir",
-    "build": "npm run build-react && npm run transpile && NODE_ENV=production electron-builder",
+    "build": " npm run transpile && NODE_ENV=production electron-builder",
     "build-all": "npm run build-react && npm run transpile && NODE_ENV=production electron-builder -mwl",
     "lint": "eslint --cache --format codeframe --ext mjs,jsx,js electron-app",
     "postinstall": "electron-builder install-app-deps"
@@ -40,6 +40,7 @@
     "ini": "^1.3.5",
     "js-yaml": "^3.13.1",
     "lodash": "^4.17.15",
+    "loglevel": "^1.6.8",
     "os": "^0.1.1",
     "prop-types": "^15.7.2",
     "ps-node": "^0.1.6",
@@ -68,7 +69,6 @@
     "file-loader": "^6.0.0",
     "install": "^0.13.0",
     "jest": "^25.2.4",
-    "loglevel": "^1.6.8",
     "neutrino": "^9.1.0",
     "node-sass": "^4.13.1",
     "npm": "^6.14.4",
@@ -78,8 +78,9 @@
   "build": {
     "appId": "defi-electron-v1",
     "copyright": "Copyright © year ${author}",
-    "asar": false,
+    "asar": true,
     "files": [
+      "./electron-app",
       "./electron-app/build",
       {
         "from": "./webapp/build/release/",
