--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "electron": "npm run transpile && NODE_ENV=development electron .",
     "electron-url-start": "export ELECTRON_START_URL=http://localhost:5000 && electron .",
     "pack": "npm run build-react && npm run transpile && NODE_ENV=production electron-builder --dir",
-    "build": " npm run transpile && NODE_ENV=production electron-builder",
+    "build": "npm run build-react npm run transpile && NODE_ENV=production electron-builder",
     "build-all": "npm run build-react && npm run transpile && NODE_ENV=production electron-builder -mwl",
     "lint": "eslint --cache --format codeframe --ext mjs,jsx,js electron-app",
     "postinstall": "electron-builder install-app-deps"
