--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@babel/preset-typescript": "^7.9.0",
     "auto-launch": "^5.0.5",
     "autoprefixer": "^9.7.5",
+    "axios": "^0.19.2",
     "base-64": "^0.1.0",
     "bootstrap": "^4.4.1",
     "crypto-js": "^4.0.0",
