--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "electron": "npm run transpile && NODE_ENV=development electron .",
     "electron-url-start": "export ELECTRON_START_URL=http://localhost:5000 && electron .",
     "pack": "npm run build-react && npm run transpile && NODE_ENV=production electron-builder --dir",
-    "build": "npm run build-react npm run transpile && NODE_ENV=production electron-builder",
+    "build": "npm run build-react && npm run transpile && NODE_ENV=production electron-builder",
     "build-all": "npm run build-react && npm run transpile && NODE_ENV=production electron-builder -mwl",
     "lint": "eslint --cache --format codeframe --ext mjs,jsx,js electron-app",
     "postinstall": "electron-builder install-app-deps"
@@ -38,6 +38,7 @@
     "electron-root-path": "^1.0.16",
     "foreman": "^3.0.1",
     "glob": "^7.1.6",
+    "http-status-codes": "^1.4.0",
     "ini": "^1.3.5",
     "js-yaml": "^3.13.1",
     "lodash": "^4.17.15",
