Basic wallet ui/get default wallet balance (#8)
* Implement fetch Wallet Balance rpc call

* set default wallet balance

* Fixed issue in rpcConfig delcaration

* restructure redux for rpc request

* Implement fetch Wallet Balance rpc call

* resolved A non-serializable value was detected  issue

--- a/webapp/package.json
+++ b/webapp/package.json
@@ -30,6 +30,7 @@
     "d3-fetch": "^1.1.2",
     "d3-scale": "^3.2.1",
     "foreman": "^3.0.1",
+    "http-status-codes": "^1.4.0",
     "is-electron": "^2.2.0",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
