--- a/webapp/package.json
+++ b/webapp/package.json
@@ -27,6 +27,7 @@
     "@storybook/addon-links": "^5.3.9",
     "@storybook/addons": "^5.3.9",
     "@storybook/react": "^5.3.9",
+    "ajv": "^6.12.2",
     "autoprefixer": "^9.7.5",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
