Epic/wallet send receive (#21)
* Resolved merge conflict

* Added send to wallet functionality

* Receive transaction

* Receive transaction

* Common call for set and get Persistent Storage

* Manage receive trans in PersistentStore

* Added get wallet txs functionality

* Pagination component implementation

* Resolved merge conflict

* Added unit in table and date format change

* Added generic functionality to pagination component

* Integrated pending balance functionality

* Added common pagination component

* Restyle wallet txns component

* UI changes for send and receive pagination

Co-authored-by: Sumit Rajput <ssumitrajput854@gmail.com>

--- a/package.json
+++ b/package.json
@@ -49,11 +49,13 @@
     "js-yaml": "^3.13.1",
     "lodash": "^4.17.15",
     "loglevel": "^1.6.8",
+    "moment": "^2.25.3",
     "os": "^0.1.1",
     "prop-types": "^15.7.2",
     "ps-node": "^0.1.6",
     "qrcode.react": "^1.0.0",
     "random-string": "^0.2.0",
+    "uid": "^1.0.0",
     "uifx": "^2.0.7",
     "utf8": "^3.0.0"
   },
