--- a/webapp/package.json
+++ b/webapp/package.json
@@ -30,7 +30,9 @@
     "ajv": "^6.12.2",
     "autoprefixer": "^9.7.5",
     "axios": "^0.19.2",
+    "bignumber.js": "^9.0.0",
     "bootstrap": "^4.4.1",
+    "comma-number": "^2.0.1",
     "d3-fetch": "^1.1.2",
     "d3-scale": "^3.2.1",
     "foreman": "^3.0.1",
