Epic/blockchain page (#27)
* Added blockPage functionality

* Added block txn functionality

* Refactored block txn UI compoent

* Added amount conversion logic for block txns

* Updated dust amount check logic

* Refactored code and removed unused variables

* Refactored mapDispatchToProps method

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "autoprefixer": "^9.7.5",
     "axios": "^0.19.2",
     "base-64": "^0.1.0",
+    "bignumber.js": "^9.0.0",
     "bootstrap": "^4.4.1",
     "commander": "^5.1.0",
     "crypto-js": "^4.0.0",
