--- a/webapp/package.json
+++ b/webapp/package.json
@@ -28,6 +28,7 @@
     "@storybook/addons": "^5.3.9",
     "@storybook/react": "^5.3.9",
     "ajv": "^6.12.2",
+    "async": "^3.2.0",
     "autoprefixer": "^9.7.5",
     "axios": "^0.19.2",
     "bignumber.js": "^9.0.0",
