Epic/console rpc calls (#31)
* Add jest setup

* Add routeting test

* Add utility test case

* WIP

* Add utility test cases

* WIP

* Fix errors, refactor code and setup localStorage for test env

* Added unit test cases for saga in wallet component

* Fix localstorage bug and add store dispacther for initial rpcAuth

* updated test suites of services and utility

* Add separate file for tesdata, cleanup of service.test.tsx

* Move mock axios to separate file, cleanup in services.test and localstorage

* Add snapshot of wallet page

* hide console log in jest and cleanup

* Added unit test cases for reducers in wallet component

* Add snapshots of walletpage component

* WIP console feature

* Cleanup in saga.test and reducer.test

* Added parser for cli query

* Add console ui with example component

* Refactor code and add validation

* Added saga, reducer and service for console container

* Wip integration of console page with saga

* Add separate route for result of Cli

* Integrated saga with console page

* Updated code to throw error from backend for invalid input

* Add reset function

* connect result page with console page

* Fix indent and warnings

* remove jest config from jest.config.js and put in neutrinorc

* Add separate testdata json for utility

* refactor test case and cleanup

* cleanup mocks and spy function

* WIP console feature

* Added parser for cli query

* Add console ui with example component

* Refactor code and add validation

* Added saga, reducer and service for console container

* Wip integration of console page with saga

* Add separate route for result of Cli

* Integrated saga with console page

* Updated code to throw error from backend for invalid input

* Add reset function

* connect result page with console page

* Fix indent and warnings

* Add console feature testcase

* fix getDataForCLIQuery

* back button on top

* Add n

--- a/webapp/package.json
+++ b/webapp/package.json
@@ -13,6 +13,8 @@
     "init": "npm i",
     "test:watch": "jest --watchAll",
     "test": "jest --silent",
+    "test:console": "jest",
+    "test:snapshot:update": "jest --updateSnapshot --silent",
     "start": "npm run init && webpack-dev-server --mode development --open",
     "start:dev": "webpack-dev-server --mode development --open",
     "build:react": "webpack --mode production",
@@ -45,6 +47,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-bootstrap-range-slider": "^0.3.1",
+    "react-console-component": "^0.6.1",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
