--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "crypto-js": "^4.0.0",
     "d3-fetch": "^1.1.2",
     "d3-scale": "^3.2.1",
+    "electron-log": "^4.2.1",
     "electron-root-path": "^1.0.16",
     "foreman": "^3.0.1",
     "glob": "^7.1.6",
