--- a/package.json
+++ b/package.json
@@ -140,6 +140,11 @@
     },
     "win": {
       "target": "NSIS"
+    },
+    "publish": {
+      "provider": "github",
+      "repo": "defi-ui",
+      "owner": "cakedefi"
     }
   },
   "lint-staged": {
