--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lint": "tslint --project tsconfig.json --config tslint.json",
     "lint:webapp": "tslint -p webapp/tsconfig.json -c tslint.json",
     "postinstall": "electron-builder install-app-deps",
+    "publish": "npm run build:react && npm run transpile && NODE_ENV=production electron-builder build -p always",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -45,6 +46,7 @@
     "d3-scale": "^3.2.1",
     "electron-log": "^4.2.1",
     "electron-root-path": "^1.0.16",
+    "electron-updater": "^4.3.1",
     "foreman": "^3.0.1",
     "glob": "^7.1.6",
     "http-status-codes": "^1.4.0",
@@ -145,7 +147,8 @@
     "publish": {
       "provider": "github",
       "repo": "defi-ui",
-      "owner": "cakedefi"
+      "owner": "cakedefi",
+      "private": true
     }
   },
   "lint-staged": {
