--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "DeFi",
-  "version": "1.0.1",
+  "version": "1.0.0",
   "description": "Defi blockchain client ui",
   "main": "./electron-app/build/index.js",
   "author": {
@@ -45,6 +45,7 @@
     "d3-fetch": "^1.1.2",
     "d3-scale": "^3.2.1",
     "electron-log": "^4.2.1",
+    "electron-progressbar": "^1.2.0",
     "electron-root-path": "^1.0.16",
     "electron-updater": "^4.3.1",
     "foreman": "^3.0.1",
