Used powershell instead of normal cmd

--- a/.github/workflows/release-builds.yml
+++ b/.github/workflows/release-builds.yml
@@ -51,6 +51,7 @@ jobs:
 
       - name: Build app
         run: npm run pre:build:win
+        shell: powershell
 
       - name: Publish app
         env:
