Updated window publish script

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "publish": "npm run build:react && npm run transpile && NODE_ENV=production electron-builder build -p always",
     "publish:linux": "npm run build:react && npm run transpile && NODE_ENV=production electron-builder build -p always",
     "publish:mac": "npm run build:react && npm run transpile && NODE_ENV=production electron-builder build -p always",
-    "publish:win": "npm run build:react && npm run transpile && NODE_ENV=production electron-builder build -p always",
+    "publish:win": "npm run build:react && npm run transpile && SET NODE_ENV=production & electron-builder build -p always",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
