--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "DeFi",
+  "name": "defi-app",
   "version": "1.0.0",
   "description": "Defi blockchain client ui",
   "main": "./electron-app/build/index.js",
