--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "defi-app",
-  "version": "1.0.0",
+  "version": "1.0.0-alpha1",
   "description": "Defi blockchain client ui",
   "main": "./electron-app/build/index.js",
   "author": {
