--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "defi-app",
-  "version": "1.0.0-alpha5",
+  "version": "1.0.0-alpha3",
   "description": "Defi blockchain client ui",
   "main": "./electron-app/build/index.js",
   "author": {
@@ -156,8 +156,8 @@
     },
     "publish": {
       "provider": "github",
-      "repo": "electron-release-example",
-      "owner": "Sumit570",
+      "repo": "defi-app",
+      "owner": "DeFiCh",
       "releaseType": "prerelease"
     }
   },
