Added bug-fixes branch to push event for testing

--- a/.github/workflows/release-builds.yml
+++ b/.github/workflows/release-builds.yml
@@ -2,6 +2,7 @@ on:
   push:
     branches:
       - master
+      - bug-fixes/payment-request-disapper-windows
   pull_request:
     branches:
       - master
