--- a/webapp/package.json
+++ b/webapp/package.json
@@ -57,6 +57,7 @@
     "react-helmet": "^5.2.1",
     "react-hot-loader": "^4.12.20",
     "react-icons": "^3.9.0",
+    "react-md-spinner": "^1.0.0",
     "react-qr-reader": "^2.2.1",
     "react-redux": "^7.2.0",
     "react-redux-i18n": "^1.9.3",
