update test case and snapshot

--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "publish:linux": "npm run build:react && npm run transpile && NODE_ENV=production electron-builder build -p always",
     "publish:mac": "npm run build:react && npm run transpile && NODE_ENV=production electron-builder build -p always",
     "publish:win": "npm run build:react && npm run transpile && SET NODE_ENV=production & electron-builder build -p always",
+    "test:react": "cd webapp/ && npm run test",
+    "test:react:snapshot": "cd webapp/ && npm run test:snapshot:update",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
