--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "glob": "^7.1.6",
     "http-status-codes": "^1.4.0",
     "ini": "^1.3.5",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.20",
     "loglevel": "^1.6.8",
     "moment": "^2.25.3",
     "os": "^0.1.1",
@@ -73,6 +73,7 @@
     "qrcode.react": "^1.0.0",
     "random-string": "^0.2.0",
     "react-ellipsis-text": "^1.2.1",
+    "react-md-spinner": "^1.0.0",
     "uid": "^1.0.0",
     "uifx": "^2.0.7",
     "utf8": "^3.0.0"
@@ -98,9 +99,9 @@
     "install": "^0.13.0",
     "jest": "^25.2.4",
     "lint-staged": "^10.2.9",
-    "neutrino": "^9.1.0",
+    "neutrino": "^9.3.0",
     "node-sass": "^4.13.1",
-    "npm": "^6.14.4",
+    "npm": "^6.14.8",
     "prettier": "^2.0.5",
     "ts-loader": "^6.2.2",
     "tslint": "^6.1.2",
