--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "pre:build:win": "sh pre-build-win.sh",
     "build": "npm run build:react && npm run transpile && NODE_ENV=production electron-builder",
     "build:all": "npm run build:react && npm run transpile && NODE_ENV=production electron-builder -mwl",
-    "build:linux": "npm run pre:build:linux && npm run build:react && npm run transpile && NODE_ENV=production electron-builder --linux",
-    "build:mac": "npm run pre:build:mac && npm run build:react && npm run transpile && NODE_ENV=production electron-builder --mac",
-    "build:win": "npm run pre:build:win && npm run build:react && npm run transpile && NODE_ENV=production electron-builder --win",
+    "build:linux": "npm run pre:build:linux && npm run build:react && npm run transpile && NODE_ENV=production electron-builder --linux -p never",
+    "build:mac": "npm run pre:build:mac && npm run build:react && npm run transpile && NODE_ENV=production electron-builder --mac -p never",
+    "build:win": "npm run build:react && npm run transpile && SET NODE_ENV=production & electron-builder --win -p never",
     "pack": "npm run build:react && npm run transpile && NODE_ENV=production electron-builder --dir",
     "lint": "tslint --project tsconfig.json --config tslint.json",
     "lint:webapp": "tslint -p webapp/tsconfig.json -c tslint.json",
@@ -163,7 +163,7 @@
       "provider": "github",
       "repo": "defi-app",
       "owner": "DeFiCh",
-      "releaseType": "prerelease"
+      "releaseType": "release"
     }
   },
   "lint-staged": {
